Notes fix #44
* Feat: Add notes, server side
* feat: add note client side
